--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
@@ -18,7 +18,17 @@
     }
 
     .ctrls {
-      text-align: right;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      * {
+        margin: 0;
+      }
+
+      button {
+        margin-right: 20px;
+      }
     }
   }
 
