--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -1,45 +1,46 @@
-.main-box {
-  height: 400px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  
-  .main {
+:host {
+  .main-box {
     height: 400px;
-    min-width: 2200px;
-    // width: 100%;
-    display: flex;
-    background-image: radial-gradient(#212121 5%, transparent 5%);
-    background-position: 0 0, 20px 20px;
-    background-size: 30px 30px;
-    border-radius: 5px 5px 0px 0px;
-    background-color: white;
-    align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
 
-    .align{
-      height: 100%;
-      margin: 50px;
-    }
-    circle-custom{
+    .main {
+      height: 400px;
+      min-width: 2200px;
+      // width: 100%;
+      display: flex;
+      background-image: radial-gradient(#212121 5%, transparent 5%);
+      background-position: 0 0, 20px 20px;
+      background-size: 30px 30px;
+      border-radius: 5px 5px 0px 0px;
+      background-color: white;
+      align-items: center;
+
+      .align {
+        height: 100%;
+        margin: 50px;
+      }
+
+      circle-custom {
         display: block;
         margin: 0px;
       }
-
-      
     }
+  }
 
-}
+  *::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
 
-*::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
+  *::-webkit-scrollbar-track {
+    background: rgb(230, 230, 230);
+  }
 
-*::-webkit-scrollbar-track {
-  background: rgb(230, 230, 230);
-}
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(131, 131, 131);
+    border-radius: 20px;
+    height: 2px;
+  }
 
-*::-webkit-scrollbar-thumb {
-  background-color: rgb(131, 131, 131);
-  border-radius: 20px;
-  height: 2px;
 }
