--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -6,11 +6,13 @@
     height: 480px;
     // width: 100%;
     display: flex;
-    background-image: radial-gradient(#212121 5%, transparent 5%);
+    background-image: radial-gradient(#71f5ac2e 5%, transparent 5%);
     background-position: 0 0, 20px 20px;
     background-size: 30px 30px;
     border-radius: 5px 5px 0px 0px;
-    background-color: white;
+    // background-color: #00031d;
+    background: linear-gradient(360deg, rgba(0, 3, 79, 0) -20%, #00031d 100%);
+    //71f5ad
     align-items: center;
 
     .align {
@@ -21,6 +23,25 @@
       display: block;
       margin: 0px;
     }
+  }
+
+  .show-more-button {
+    position: absolute;
+    border-radius: 4px;
+    right: 60px;
+    margin-top: 10px;
+    color: #71f5ad;
+    font-weight: 600;
+  }
+  .show-more-button:hover {
+    text-decoration-line: underline;
+    text-decoration-color: #71f5ad;
+  }
+
+  .message{
+    color: #71f5ad;
+    font-weight: 600;
+    font-size: 20px;
   }
 }
 
