--- a/src/app/public-documents/components/circle-custom/circle-custom.component.scss
+++ b/src/app/public-documents/components/circle-custom/circle-custom.component.scss
@@ -26,17 +26,20 @@
   // justify-content: center;
   // align-items: center;
 
-
-
   width: 100%;
   height: 100%;
   position: relative;
   background-size: cover;
-  box-shadow: 0px 0px 10px #707070;
+  // box-shadow: 0px 0px 15px #71f5ad;
+
+  background-color: #71f5ad;
+  color: #00031d;
+  border: 4px solid #71f5ad;
+  // border-radius: 6px;
   border-radius: 100%;
   display: flex;
   flex-direction: row;
-  filter: grayscale(60%);
+  // filter: grayscale(60%);
   justify-content: center;
   align-items: center;
 }
@@ -62,9 +65,9 @@
 }
 
 .container .out-circumference {
-  // width: 100%;
-  // height: 100%;
-  border-color: #ff6d00;
+  width: 100%;
+  height: 100%;
+  border-color: #71f5ad;
   border-style: solid;
   border-width: 4px;
   border-radius: 100%;
@@ -77,13 +80,13 @@
 .title {
   text-align: center;
   font-weight: 600;
-  color: #ffffff;
+  color: #00031d;
 }
 .value {
-  margin-top: 8px;
+  margin-top: 3px;
   text-align: center;
   font-weight: 600;
-  color: #ffffff;
+  color: #00031d;
 }
 span {
   justify-content: center;
