--- a/src/app/public-documents/components/panel-circles/panel-circles.component.html
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.html
@@ -1,16 +1,6 @@
 <div class="main-box">
-  <div
-    *ngIf="categoryLength > 10"
-    style="
-      position: absolute;
-      background-color: #306eff;
-      color: white;
-      border-radius: 4px;
-      right: 60px;
-      margin-top: 10px;
-    "
-  >
-    <button mat-button [matMenuTriggerFor]="menu">Más categorías</button>
+  <div *ngIf="categoryLength > 10" >
+    <button mat-button [matMenuTriggerFor]="menu" class="show-more-button">Ver más categorías</button>
     <mat-menu #menu="matMenu" xPosition="before">
       <button
         mat-menu-item
@@ -22,20 +12,25 @@
     </mat-menu>
   </div>
   <div class="main shadow">
-    <div
-      [ngClass]="'set-' + item.set"
-      [style.margin]="item.margin"
-      *ngFor="let item of slices"
-    >
-      <div class="align" *ngFor="let item of item.data">
-        <circle-custom
-          [data]="item"
-          [size]="item.size"
-          [position]="item.position"
-          [categoryLength]="categoryLength"
-          (click)="redirect(item.id)"
-        ></circle-custom>
-      </div>
+    <div class="set-12 txt-center message" *ngIf="data.length === 0">
+      <p>No cuenta con categorias</p>
     </div>
+    <ng-container  *ngIf="data.length !== 0">
+      <div
+        [ngClass]="'set-' + item.set"
+        [style.margin]="item.margin"
+        *ngFor="let item of slices"
+      >
+        <div class="align" *ngFor="let item of item.data">
+          <circle-custom
+            [data]="item"
+            [size]="item.size"
+            [position]="item.position"
+            [categoryLength]="categoryLength"
+            (click)="redirect(item.id)"
+          ></circle-custom>
+        </div>
+      </div>
+    </ng-container>
   </div>
 </div>
