--- a/src/app/hub/components/admin-template/admin-template.component.html
+++ b/src/app/hub/components/admin-template/admin-template.component.html
@@ -74,7 +74,7 @@
                   <li>
                     <button type="button" (click)="linkMe('/documentos/' + document._id + '/categoria/' + layout._id)"
                       matTooltip="Abrir categoría" matTooltipClass="tooltip" matTooltipPosition="right">
-                      <small>{{layout.category.name}}</small>
+                      <span style="font-size: 14px">{{layout.category.name}}</span>
                     </button>
                   </li>
                 </ul>
