--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -29,12 +29,12 @@
         <h3 class="txt-center">{{ user.firstname }} {{ user.lastname }}</h3>
         <div class="set-12 usrinfo">
           <p class="set-12">
-            <small class="set-6">Documentos:</small>
-            <small class="set-6 txt-right"><strong class="txt-blue">0</strong></small>
+            <span class="set-6">Documentos:</span>
+            <span class="set-6 txt-right"><strong class="txt-blue">0</strong></span>
           </p>
           <p class="set-12">
-            <small class="set-6">Colaboradores:</small>
-            <small class="set-6 txt-right"><strong class="txt-blue">0</strong></small>
+            <span class="set-6">Colaboradores:</span>
+            <span class="set-6 txt-right"><strong class="txt-blue">0</strong></span>
           </p>
         </div>
       </div>
