--- a/src/app/public-documents/components/panel-circles/panel-circles.component.html
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="main shadow">
     <div class="set-12 txt-center message" *ngIf="data.length === 0">
-      <p>No cuenta con categorias</p>
+      <p>No cuenta con categorías</p>
     </div>
     <ng-container  *ngIf="data.length !== 0">
       <div
