--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -99,8 +99,8 @@
                     <button
                       *ngIf="!userVoted"
                       mat-raised-button
-                      color="primary"
-                      style="background-color: primary"
+                      color="black"
+                      style="background-color: #71f5ad;font-weight: 600;font-size: 16px;"
                       (click)="openModalVote()"
                     >
                       Votar
