--- a/src/app/public-documents/components/circle-custom/circle-custom.component.scss
+++ b/src/app/public-documents/components/circle-custom/circle-custom.component.scss
@@ -7,6 +7,7 @@
   position: relative;
   cursor: pointer;
 }
+
 .container .out-circumference .overlay .in-circumference {
   // width: 100%;
   // height: 70%;
@@ -34,7 +35,7 @@
 
   background-color: #71f5ad;
   color: #00031d;
-  border: 4px solid #71f5ad;
+  // border: 4px solid #71f5ad;
   // border-radius: 6px;
   border-radius: 100%;
   display: flex;
@@ -43,6 +44,7 @@
   justify-content: center;
   align-items: center;
 }
+
 // .container .out-circumference .in-circumference ::before {
 //   position: absolute;
 //   border-radius: 100%;
@@ -79,7 +81,7 @@
 
 .title {
   text-align: center;
-  font-weight: 600;
+  font-weight: 700;
   color: #00031d;
 }
 .value {
