--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -31,11 +31,11 @@
     right: 60px;
     margin-top: 10px;
     color: #71f5ad;
-    font-weight: 600;
+    font-weight: 700;
+    font-size: 15px;
   }
   .show-more-button:hover {
-    text-decoration-line: underline;
-    text-decoration-color: #71f5ad;
+    text-decoration: underline solid #71f5ad 4px;
   }
 
   .message{
