--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -9,7 +9,7 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Título</th>
         <td mat-cell *matCellDef="let element">
-          <button type="button" class="catbtn" (click)="redirect(element._id)">
+          <button type="button" class="catbtn-2 " (click)="redirect(element._id)">
             {{ element.title }}
           </button> 
         </td>
