--- a/src/app/public-documents/components/solutions-card/solutions-card.component.scss
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.scss
@@ -2,7 +2,7 @@
   padding: 10px;
   .title {
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 700;
   }
   .title-column {
     font-size: 12px;
@@ -20,6 +20,19 @@
       text-align: start;
       border-bottom: 2px solid rgba(128, 128, 128, 0.327);
     }
+  }
+
+  .catbtn-2 {
+    // background-color: #71f5ad; 
+    // color: #00031d;
+    padding: 5px 20px;
+    // border: 3px solid #71f5ad;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 4px;
+  }
+  .catbtn-2:hover{
+    text-decoration: underline solid #71f5ad 4px;
   }
 }
 .table-head {
