--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -1,5 +1,6 @@
 .testimonials {
   width: 100%;
+  overflow: auto;
   //   background-color: orange;
   mat-icon {
     font-size: 70pt;
@@ -7,7 +8,7 @@
   }
   .title-card{
     font-size: 13pt;
-    font-weight: 600;
+    font-weight: 700;
   }
   .title {
     margin: 0;
