--- a/src/app/public-documents/components/top10-list/top10-list.component.scss
+++ b/src/app/public-documents/components/top10-list/top10-list.component.scss
@@ -20,7 +20,7 @@
   padding: 25px 10px;
   .title {
     padding-left: 15px;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 18px;
   }
   .name {
@@ -38,9 +38,9 @@
   margin: 0px 0px;
   background: linear-gradient(
     270.1deg,
-    #20c588 50.09%,
-    #9747ff 71.25%,
-    #ffad70 97.89%
+    #71f5ad 50.09%,
+    #71f5ad 71.25%,
+    #71f5ad 97.89%
   );
 }
 mat-list-item {
