--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -84,7 +84,7 @@
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Título</th>
                 <td mat-cell *matCellDef="let element">
-                  <button type="button" class="catbtn" (click)="redirectSolution(element._id)">
+                  <button type="button" class="catbtn-2" (click)="redirectSolution(element._id)">
                     {{element.title}}
                   </button>
                 </td>
@@ -114,7 +114,7 @@
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Título</th>
                 <td mat-cell *matCellDef="let element">
-                  <button type="button" class="catbtn" (click)="redirect(element._id)">
+                  <button type="button" class="catbtn-2" (click)="redirect(element._id)">
                     {{element.title}}
                   </button>
                 </td>
