--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -14,7 +14,7 @@
         p {
           margin-left: 18%;
           font-size: 16px;
-          font-weight: 500;
+          font-weight: 700;
           margin-top: 10px;
         }
 
@@ -54,7 +54,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: rgba($color: #CEDDFF, $alpha: 0.4);
+      background: rgba($color: #ceddff, $alpha: 0.4);
       border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
       overflow: hidden;
 
@@ -76,7 +76,7 @@
     }
 
     .card-title {
-      font-weight: 600;
+      font-weight: 700;
       font-size: 20px;
       text-transform: uppercase;
       color: #000000;
@@ -122,8 +122,20 @@
     height: 208px;
   }
 
-}
+  .catbtn-2 {
+    // background-color: #71f5ad; 
+    // color: #00031d;
+    padding: 5px 20px;
+    // border: 3px solid #71f5ad;
 
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 4px;
+  }
+  .catbtn-2:hover{
+    text-decoration: underline solid #71f5ad 4px;
+  }
+}
 
 .table-head {
   display: flex;
@@ -151,7 +163,7 @@
   }
 
   input[type="text"]:focus {
-    box-shadow: inset 0 0 0 2px #306EFF;
+    box-shadow: inset 0 0 0 2px #306eff;
   }
 
   input[type="text"]:disabled {
