--- a/src/app/components/window-alert/window-alert.component.html
+++ b/src/app/components/window-alert/window-alert.component.html
@@ -24,8 +24,12 @@
       <p>¿Deseas continuar?</p>
     </div>
     <div class="set-12 ctrls">
-      <button type="button" mat-raised-button color="accent" (click)="killDialog()">Cancelar</button>
-      <button type="button" mat-raised-button color="primary" (click)="setAsCover()">Continuar</button>
+      <button type="button" mat-raised-button color="accent" (click)="killDialog()">
+        <small>Cancelar</small>
+      </button>
+      <button type="button" mat-raised-button color="primary" (click)="setAsCover()">
+        <small>Continuar</small>
+      </button>
     </div>
   </div>
 </div>
