--- a/src/app/hub/components/admin-template/admin-template.component.scss
+++ b/src/app/hub/components/admin-template/admin-template.component.scss
@@ -16,7 +16,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-left: 20px;
+      // margin-left: 20px;
     }
   }
 
@@ -41,7 +41,7 @@
 
     mat-icon {
       font-size: 13pt;
-      color: #306EFF;
+      // color: #306EFF;
     }
 
     button {
@@ -64,14 +64,23 @@
     align-items: center;
     justify-content: center;
 
+    .icon {
+      margin-top: 20px;
+
+      mat-icon {
+        font-size: 40pt;
+      }
+
+    }
+
     button {
       margin-top: 20px;
     }
   }
 
   .imghldr {
-    min-height: 150px;
-    max-height: 150px;
+    min-height: 200px;
+    max-height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
