--- a/src/app/hub/components/editor-template/editor-template.component.html
+++ b/src/app/hub/components/editor-template/editor-template.component.html
@@ -1,16 +1,16 @@
-<div class="set-12 toptools">
+<!-- <div class="set-12 toptools">
   <strong><small>DOCUMENTOS</small></strong>
-</div>
+</div> -->
 
 <!-- empty documents -->
 <div class="set-12" *ngIf="documents.length == 0 && isDataAvailable">
   <div class="set-12 carousel-hldr">
-    <carousel [cellsToShow]="1" [arrows]="false">
+    <carousel [cellsToShow]="2" [arrows]="false">
       <div class="carousel-cell">
         <mat-card class="emptycard">
           <div class="set-12 txt-center">
-            <mat-icon>folder</mat-icon>
-            <h4>No hay documentos que mostar</h4>
+            <mat-icon color="primary">folder</mat-icon>
+            <h4>Sin documentos disponibles</h4>
           </div>
         </mat-card>
       </div>
@@ -31,11 +31,30 @@
 
           <div class="set-12 infohldr">
             <div class="set-12 card-row">
-              <div class="set-8">
+              <div class="set-11">
                 <h4>{{document.title}}</h4>
               </div>
-              <div class="set-4 txt-right">
-                <button type="button" matTooltip="Editar">
+
+              <div class="set-1 txt-right">
+                <button [matMenuTriggerFor]="menu">
+                  <mat-icon color="primary">more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item type="button">
+                    <mat-icon color="primary">pie_chart</mat-icon>
+                    <span>Ver datos</span>
+                  </button>
+                  <button mat-menu-item type="button" (click)="linkMe('/documentos-publicos/' + document._id)">
+                    <mat-icon color="primary">groups</mat-icon>
+                    <span>Abrir público</span>
+                  </button>
+                  <button mat-menu-item type="button" (click)="linkMe('/documentos/' + document._id)">
+                    <mat-icon color="primary">lock</mat-icon>
+                    <span>Abrir privado</span>
+                  </button>
+                </mat-menu>
+
+                <!-- <button type="button" matTooltip="Editar">
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button type="button" matTooltip="Abrir" (click)="linkMe('/documentos/' + document._id)">
@@ -43,13 +62,13 @@
                 </button>
                 <button type="button" matTooltip="Datos">
                   <mat-icon>pie_chart</mat-icon>
-                </button>
+                </button> -->
               </div>
             </div>
 
             <div class="set-12 card-row counts">
-              <mat-icon>person</mat-icon> <small>{{document.collaborators.length}} Usuarios</small>
-              <mat-icon>front_hand</mat-icon> <small>0 Interacciones</small>
+              <mat-icon color="primary">person</mat-icon> <small>{{document.collaborators.length}} Usuarios</small>
+              <mat-icon color="primary">front_hand</mat-icon> <small>0 Interacciones</small>
             </div>
 
             <div class="set-12 empty-layout" *ngIf="document.layouts.length == 0">
@@ -58,13 +77,13 @@
               </div>
 
               <div class="set-12">
-                <mat-icon>folder</mat-icon>
+                <mat-icon color="primary">folder</mat-icon>
                 <p><strong><small>Tu documento esta vacio</small></strong></p>
               </div>
 
               <div class="set-12 ctrls">
                 <button type="button" mat-raised-button color="primary" (click)="popLayoutDialog(document._id)">
-                  <span>Crear esquema</span>
+                  <small>Crear esquema</small>
                 </button>
               </div>
             </div>
