--- a/src/scss/palette.scss
+++ b/src/scss/palette.scss
@@ -1,77 +1,138 @@
-$md-palette-primary: (50 : #e6eeff,
-  100 : #c1d4ff,
-  200 : #98b7ff,
-  300 : #6e9aff,
-  400 : #4f84ff,
-  500 : #306eff,
-  600 : #2b66ff,
-  700 : #245bff,
-  800 : #1e51ff,
-  900 : #133fff,
-  A100 : #ffffff,
-  A200 : #fafbff,
-  A400 : #c7d0ff,
-  A700 : #adbaff,
+// $md-palette-primary: (50 : #e6eeff,
+//   100 : #c1d4ff,
+//   200 : #98b7ff,
+//   300 : #6e9aff,
+//   400 : #4f84ff,
+//   500 : #306eff,
+//   600 : #2b66ff,
+//   700 : #245bff,
+//   800 : #1e51ff,
+//   900 : #133fff,
+//   A100 : #ffffff,
+//   A200 : #fafbff,
+//   A400 : #c7d0ff,
+//   A700 : #adbaff,
+//   contrast: (50 : #000000,
+//     100 : #000000,
+//     200 : #000000,
+//     300 : #000000,
+//     400 : #000000,
+//     500 : #ffffff,
+//     600 : #ffffff,
+//     700 : #ffffff,
+//     800 : #ffffff,
+//     900 : #ffffff,
+//     A100 : #000000,
+//     A200 : #000000,
+//     A400 : #000000,
+//     A700 : #000000,
+//   ));
+
+// $md-palette-accent: (50 : #e4f8f1,
+//   100 : #bbeedb,
+//   200 : #8ee2c4,
+//   300 : #61d6ac,
+//   400 : #3fce9a,
+//   500 : #1dc588,
+//   600 : #1abf80,
+//   700 : #15b875,
+//   800 : #11b06b,
+//   900 : #0aa358,
+//   A100 : #d0ffe6,
+//   A200 : #9dffcb,
+//   A400 : #6affaf,
+//   A700 : #51ffa1,
+//   contrast: (50 : #000000,
+//     100 : #000000,
+//     200 : #000000,
+//     300 : #000000,
+//     400 : #000000,
+//     500 : #000000,
+//     600 : #000000,
+//     700 : #ffffff,
+//     800 : #ffffff,
+//     900 : #ffffff,
+//     A100 : #000000,
+//     A200 : #000000,
+//     A400 : #000000,
+//     A700 : #000000,
+//   ));
+
+// $md-palette-warn: (50 : #ffede1,
+//   100 : #ffd3b3,
+//   200 : #ffb680,
+//   300 : #ff994d,
+//   400 : #ff8327,
+//   500 : #ff6d01,
+//   600 : #ff6501,
+//   700 : #ff5a01,
+//   800 : #ff5001,
+//   900 : #ff3e00,
+//   A100 : #ffffff,
+//   A200 : #fff5f2,
+//   A400 : #ffcbbf,
+//   A700 : #ffb6a6,
+//   contrast: (50 : #000000,
+//     100 : #000000,
+//     200 : #000000,
+//     300 : #000000,
+//     400 : #000000,
+//     500 : #000000,
+//     600 : #000000,
+//     700 : #000000,
+//     800 : #ffffff,
+//     900 : #ffffff,
+//     A100 : #000000,
+//     A200 : #000000,
+//     A400 : #000000,
+//     A700 : #000000,
+//   ));
+
+/* For use in src/lib/core/theming/_palette.scss */
+$md-palette-primary: (50 : #e0e1e4,
+  100 : #b3b3bb,
+  200 : #80818e,
+  300 : #4d4f61,
+  400 : #26293f,
+  500 : #00031d,
+  600 : #00031a,
+  700 : #000215,
+  800 : #000211,
+  900 : #00010a,
+  A100 : #4f4fff,
+  A200 : #1c1cff,
+  A400 : #0000e8,
+  A700 : #0000ce,
   contrast: (50 : #000000,
     100 : #000000,
     200 : #000000,
-    300 : #000000,
-    400 : #000000,
+    300 : #ffffff,
+    400 : #ffffff,
     500 : #ffffff,
     600 : #ffffff,
     700 : #ffffff,
     800 : #ffffff,
     900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
+    A100 : #ffffff,
+    A200 : #ffffff,
+    A400 : #ffffff,
+    A700 : #ffffff,
   ));
 
-$md-palette-accent: (50 : #e4f8f1,
-  100 : #bbeedb,
-  200 : #8ee2c4,
-  300 : #61d6ac,
-  400 : #3fce9a,
-  500 : #1dc588,
-  600 : #1abf80,
-  700 : #15b875,
-  800 : #11b06b,
-  900 : #0aa358,
-  A100 : #d0ffe6,
-  A200 : #9dffcb,
-  A400 : #6affaf,
-  A700 : #51ffa1,
-  contrast: (50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #000000,
-    600 : #000000,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
-  ));
-
-$md-palette-warn: (50 : #ffede1,
-  100 : #ffd3b3,
-  200 : #ffb680,
-  300 : #ff994d,
-  400 : #ff8327,
-  500 : #ff6d01,
-  600 : #ff6501,
-  700 : #ff5a01,
-  800 : #ff5001,
-  900 : #ff3e00,
+$md-palette-accent: (50 : #eefef5,
+  100 : #d4fce6,
+  200 : #b8fad6,
+  300 : #9cf8c6,
+  400 : #86f7b9,
+  500 : #71f5ad,
+  600 : #69f4a6,
+  700 : #5ef29c,
+  800 : #54f093,
+  900 : #42ee83,
   A100 : #ffffff,
-  A200 : #fff5f2,
-  A400 : #ffcbbf,
-  A700 : #ffb6a6,
+  A200 : #ffffff,
+  A400 : #d9ffe7,
+  A700 : #bfffd6,
   contrast: (50 : #000000,
     100 : #000000,
     200 : #000000,
@@ -80,6 +141,36 @@ $md-palette-warn: (50 : #ffede1,
     500 : #000000,
     600 : #000000,
     700 : #000000,
+    800 : #000000,
+    900 : #000000,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  ));
+
+$md-palette-warn: (50 : #e4f0f0,
+  100 : #bcd8d9,
+  200 : #8fbfbf,
+  300 : #62a5a5,
+  400 : #409192,
+  500 : #1e7e7f,
+  600 : #1a7677,
+  700 : #166b6c,
+  800 : #126162,
+  900 : #0a4e4f,
+  A100 : #85fdff,
+  A200 : #52fcff,
+  A400 : #1ffbff,
+  A700 : #05fbff,
+  contrast: (50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
     800 : #ffffff,
     900 : #ffffff,
     A100 : #000000,
