fix: problemas o soluciones

--- a/src/app/public-documents/components/solutions-card/solutions-card.component.scss
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.scss
@@ -71,3 +71,13 @@
   }
 }
 
+.notData{
+  width: 100%;
+  height: 130px;
+  line-height: 130px;
+  text-align: center;
+}
+
+.searchDisabled{
+  opacity: 0 !important;
+}
