--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -3,9 +3,14 @@
     <div class="set-12 table-head">
       <p class="title">Soluciones</p>
       <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Buscar soluciones..."
-        [disabled]="data.length == 0">
+        [disabled]="data.length == 0"
+        [class.searchDisabled]="data.filteredData.length === 0"
+        >
     </div>
-    <table mat-table [dataSource]="data" class="">
+    <table *ngIf="data.filteredData.length > 0 else notSolution" 
+            mat-table 
+            [dataSource]="data" 
+            class="">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Título</th>
         <td mat-cell *matCellDef="let element">
@@ -25,5 +30,9 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+    <ng-template #notSolution>
+      <p class="notData">Sin soluciones</p>
+    </ng-template>
+    
   </div>
 </mat-card>
