--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -61,7 +61,9 @@
           <div class="set-3 ">
             <div class="set-4 table-head">
               <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Buscar soluciones..."
-                [disabled]="solutionsDataSource.length == 0">
+                [disabled]="solutionsDataSource.length == 0"
+                [class.searchDisabled]="solutionsDataSource.length === 0"
+                >
             </div>
           </div>
           <div class="set-3 title">
@@ -73,14 +75,17 @@
           <div class="set-3">
             <div class="set-4 table-head">
               <input type="text" (keyup)="applyFilterTopic($event)" placeholder="Buscar temas..."
-                [disabled]="topicsDataSource.length == 0">
+                [disabled]="topicsDataSource.length == 0"
+                [class.searchDisabled]="panelTopicsData.length === 0"
+                >
             </div>
           </div>
         </div>
         <div class="set-12 tables" style="background-color: white">
           <div class="set-6">
             
-            <table mat-table [dataSource]="SolutionDataSource" class="mat-elevation-z8">
+            <table mat-table [dataSource]="SolutionDataSource" class="mat-elevation-z8"
+            *ngIf="solutionsDataSource.length > 0 else notsolutions">
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Título</th>
                 <td mat-cell *matCellDef="let element">
@@ -108,9 +113,14 @@
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
           </div>
+          <ng-template #notsolutions>
+            <p class="notData">Sin soluciones</p>
+          </ng-template>
+          
           <div class="set-6">
             
-            <table mat-table [dataSource]="TopicDataSource" class="mat-elevation-z8" >
+            <table mat-table [dataSource]="TopicDataSource" class="mat-elevation-z8" 
+            *ngIf="panelTopicsData.length > 0 else nottopic">
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Título</th>
                 <td mat-cell *matCellDef="let element">
@@ -137,6 +147,9 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
+            <ng-template #nottopic>
+              <p class="notData">Sin problemas</p>
+            </ng-template>
           </div>
         </div>
       </div>
