--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -171,3 +171,14 @@
     opacity: 0.7;
   }
 }
+
+.notData{
+  width: 100%;
+  height: 130px;
+  line-height: 130px;
+  text-align: center;
+}
+
+.searchDisabled{
+  opacity: 0 !important;
+}
