--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -67,7 +67,7 @@
       color: #71f5ad;
     }
 
-    button:hover {
+    button:nth-child(1):hover , button:nth-child(2):hover {
       text-decoration: underline solid #71f5ad 4px;
     }
 
