--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -25,7 +25,7 @@
 
   .content {
     max-height: 600px;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-right: 8pt;
     margin-top: 20pt;
 
