fix: hover lista de problemas

--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -133,7 +133,7 @@
     border-radius: 4px;
   }
   .catbtn-2:hover{
-    text-decoration: underline solid #71f5ad 4px;
+    text-decoration: underline solid rgba(0,0,0,0.87) 4px;
   }
 }
 
