--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -37,7 +37,7 @@
 
           <div class="set-12 infohldr">
             <p class="set-12 card-title">
-              {{ selectedCategory.category.name }}
+              {{ selectedCategoryTitle }}
             </p>
             <expanded-text [text]="selectedCategory.description" [minLength]="200"></expanded-text>
           </div>
