--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="set-12 infohldr">
-            <p class="set-12 card-title">{{ subcategory.category.name }}</p>
+            <p class="set-12 card-title">{{ subCategoryTitle }}</p>
             <expanded-text [text]="subcategory.description" [minLength]="200"></expanded-text>
           </div>
         </mat-card>
