--- a/src/styles.scss
+++ b/src/styles.scss
@@ -630,3 +630,7 @@ mat-form-field {
   font-family: 'Montserrat', "Helvetica Neue", sans-serif !important;
 
 }
+
+.author-hldr {
+  margin-bottom: 20px;
+}
