--- a/src/app/components/add-document-category/add-document-category.component.html
+++ b/src/app/components/add-document-category/add-document-category.component.html
@@ -48,10 +48,13 @@
           </div>
 
           <div class="set-12 ctrls">
-            <button type="button" mat-raised-button color="accent" (click)="popAddRootCategoryDialog()">Nueva
-              categoría</button>
+            <button type="button" mat-raised-button color="accent" (click)="popAddRootCategoryDialog()">
+              <small>Nueva Categoría</small>
+            </button>
             <button type="button" mat-raised-button color="primary" matStepperNext
-              [disabled]="stepTwoFormGroup.invalid">Siguiente</button>
+              [disabled]="stepTwoFormGroup.invalid">
+              <small>Siguiente</small>
+            </button>
           </div>
         </div>
       </mat-step>
@@ -76,11 +79,13 @@
               </button>
             </div>
           </form>
+
           <div class="set-12 ctrls">
-            <button type="button" mat-raised-button color="primary" matStepperPrevious
-              [disabled]="isSubmitted">Atras</button>
+            <button type="button" mat-raised-button color="primary" matStepperPrevious [disabled]="isSubmitted">
+              <small>Atras</small>
+            </button>
             <button type="button" mat-raised-button color="accent" (click)="onAddLayout()" [disabled]="isSubmitted">
-              <span>Guardar</span>
+              <small>Guardar</small>
             </button>
             <mat-spinner diameter="20" *ngIf="isSubmitted"></mat-spinner>
           </div>
