--- a/src/app/components/add-root-category/add-root-category.component.html
+++ b/src/app/components/add-root-category/add-root-category.component.html
@@ -12,10 +12,12 @@
     </mat-form-field>
 
     <div class="set-12 ctrls">
-      <button type="button" mat-raised-button color="accent" [disabled]="submitted"
-        (click)="killDialog()">Cancelar</button>
-      <button type="submit" mat-raised-button color="primary"
-        [disabled]="addCategoryFormGroup.invalid || submitted">Guardar</button>
+      <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+        <small>Cancelar</small>
+      </button>
+      <button type="submit" mat-raised-button color="primary" [disabled]="addCategoryFormGroup.invalid || submitted">
+        <small>Guardar</small>
+      </button>
     </div>
   </form>
 </div>
