--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -12,34 +12,13 @@
     <button *ngIf="permission == false && isPublic > 0" type="button" class="btn-permissios" (click)="btnPermissions()">
       Permiso para editar
     </button>
-    <button
-      *ngIf="permission == true && isPublic > 0"
-      type="button"
-      class="btn-permissios"
-      (click)="redirectEdition()"
-    >
+    <button *ngIf="permission == true && isPublic > 0" type="button" class="btn-permissios" (click)="redirectEdition()">
       Ir a edición
     </button>
-    <button
-      *ngIf="permission == true && isPublic == -1"
-      type="button"
-      class="btn-permissios"
-      (click)="redirectEdition()"
-    >
+    <button *ngIf="permission == true && isPublic == -1" type="button" class="btn-permissios"
+      (click)="redirectEdition()">
       Ver público
     </button>
-
-    <!-- <button type="button">
-      <span>Ciudadanos</span>
-    </button>
-
-    <button type="button">
-      <span>Candidatx Ideal</span>
-    </button>
-
-    <button type="button">
-      <span>Comité Ciudadano</span>
-    </button> -->
 
     <button type="button">
       <span>Pensamiento colectivo</span>
@@ -76,10 +55,6 @@
       matTooltipClass="tooltip">
       <mat-icon>power_settings_new</mat-icon>
     </button>
-
-    <!-- <button type="button" class="btn-menu">
-      <mat-icon>menu</mat-icon>
-    </button> -->
 
     <button type="button" class="btn-ico" *ngIf="user != null && userActivities.includes('moderator')"
       [matMenuTriggerFor]="menu">
