--- a/src/app/components/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/components/breadcrumbs/breadcrumbs.component.scss
@@ -4,7 +4,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     margin: 0;
-    margin-bottom: 2em;
+    margin-bottom: 5px;
     margin-top: 0;
     padding: 0;
     font-size: 9pt;
