--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -4,25 +4,23 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
-    <div class="set-6">
-      <breadcrumbs-component>
-        <li>Documentos</li>
-        <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos/' + document._id)">
-          {{ document.title }}
-        </li>
-        <ng-template #noTitle>
-          <div>categoria</div>
-        </ng-template>
-        <li>{{ selectedCategory.category.name }}</li>
-      </breadcrumbs-component>
-    </div>
+    <breadcrumbs-component>
+      <li>Documentos</li>
+      <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos/' + document._id)">
+        {{ document.title }}
+      </li>
+      <ng-template #noTitle>
+        <div>categoria</div>
+      </ng-template>
+      <li>{{ selectedCategory.category.name }}</li>
+    </breadcrumbs-component>
+  </div>
 
-    <div class="set-6 txt-right">
-      <span class="created-by" *ngIf="selectedCategory.createdBy != null">
-        Autor: <span class="author">{{selectedCategory.createdBy.firstname}}
-          {{selectedCategory.createdBy.lastname}}</span>
-      </span>
-    </div>
+  <div class="set-12 author-hldr">
+    <span class="created-by" *ngIf="selectedCategory.createdBy != null">
+      Autor: <span class="author">{{selectedCategory.createdBy.firstname}}
+        {{selectedCategory.createdBy.lastname}}</span>
+    </span>
   </div>
 
   <div class="set-12">
@@ -68,6 +66,32 @@
           <avatars-row [users]="collaborators"></avatars-row>
         </div>
       </mat-card>
+
+      <mat-card class="set-12">
+        <div class="inner-card">
+          <div class="set-4">
+            <span class="roundico-green">
+              <mat-icon>groups</mat-icon>
+            </span>
+          </div>
+          <div class="set-8">
+            <p><small>Usuarios</small></p>
+            <strong>{{collaborators.length}}</strong>
+          </div>
+        </div>
+
+        <div class="inner-card">
+          <div class="set-4">
+            <span class="roundico-orange">
+              <mat-icon>front_hand</mat-icon>
+            </span>
+          </div>
+          <div class="set-8">
+            <p><small>Interacciones</small></p>
+            <strong>0</strong>
+          </div>
+        </div>
+      </mat-card>
     </div>
 
     <div class="set-9 col-rgt">
@@ -91,14 +115,46 @@
           <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Colaborador">
             <mat-icon>person_add</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Categoría"
+          <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Sub Categoría"
             (click)="popAddDocumentCategory()">
             <mat-icon>create_new_folder</mat-icon>
           </button>
         </div>
       </div>
 
-      <div class="set-12">
+      <div class="set-12 list-hldr">
+        <div class="set-6">
+          <mat-card class="set-12 info-lists">
+            <p class="list-title">
+              <small>Soluciones</small>
+              <mat-icon class="icon-insights">insights</mat-icon>
+            </p>
+
+            <!--ol class="top-list">
+              <li class="top-list-item">
+                <span>Inseguridad</span>
+              </li>
+            </ol-->
+          </mat-card>
+        </div>
+
+        <div class="set-6">
+          <mat-card class="set-12 info-lists">
+            <p class="list-title">
+              <small>Problemas</small>
+              <mat-icon class="icon-warnings">warning</mat-icon>
+            </p>
+
+            <!-- <ol class="top-list">
+              <li class="top-list-item">
+                <span>Inseguridad</span>
+              </li>
+            </ol> -->
+          </mat-card>
+        </div>
+      </div>
+
+      <!-- <div class="set-12">
         <mat-card class="set-12 info-lists">
           <div class="set-4">
             <div class="inner-card">
@@ -107,6 +163,7 @@
                   <mat-icon>groups</mat-icon>
                 </span>
               </div>
+
               <div class="set-8">
                 <p><small>Usuarios</small></p>
                 <strong>{{collaborators.length}}</strong>
@@ -119,6 +176,7 @@
                   <mat-icon>front_hand</mat-icon>
                 </span>
               </div>
+              
               <div class="set-8">
                 <p><small>Interacciones</small></p>
                 <strong>0</strong>
@@ -131,13 +189,6 @@
               <small>Soluciones</small>
               <mat-icon class="icon-insights">insights</mat-icon>
             </p>
-
-            <!-- <ol class="top-list">
-              <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4);"
-                (click)="linkSolution(solution._id, solution.subcategory._id, solution.topic._id)">
-                <span>{{solution.title}}</span>
-              </li>
-            </ol> -->
           </div>
 
           <div class="set-4">
@@ -145,31 +196,6 @@
               <small>Problemas</small>
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
-
-            <!-- <ol class="top-list">
-              <li class="top-list-item" *ngFor="let topic of topics.slice(0, 4);"
-                (click)="linkTopic(topic._id, topic.subcategory._id)">
-                <span>{{topic.title}}</span>
-              </li>
-            </ol> -->
-          </div>
-        </mat-card>
-      </div>
-
-      <!-- <div class="set-12 empty-subs category-list" *ngIf="subcategories.length == 0">
-        <mat-card class="set-12">
-          <div class="set-12 txt-center">
-            <p>
-              <mat-icon color="primary">folder</mat-icon>
-            </p>
-            <p>
-              <strong>
-                <small>Tu documento esta vacio</small>
-              </strong>
-            </p>
-            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()">
-              Agregar sub categoría
-            </button>
           </div>
         </mat-card>
       </div> -->
@@ -183,39 +209,51 @@
           </div>
 
           <div class="set-12 empty-layouts" *ngIf="subcategories.length == 0">
-            <p>Sin sub categorías disponibles.</p>
+            <p>
+              <small>Sin sub categorías disponibles.</small>
+            </p>
+            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()">
+              <small>Agregar Sub Categoría</small>
+            </button>
           </div>
 
           <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="subcategories.length != 0">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" class="catbtn" (click)="linkSubcategory(element._id)">
-                  {{element.category.name}}
+                <button type="button" class="catbtn"
+                  (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
+                  <small>{{element.category.name}}</small>
                 </button>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="users">
               <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-              <td mat-cell *matCellDef="let element">{{ element.users }}</td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{ element.users || 'NA' }}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="interactions">
               <th mat-header-cell *matHeaderCellDef>Interacciones</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.interactions }}
+                <small>{{ element.interactions || 'NA' }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef>Soluciones</th>
-              <td mat-cell *matCellDef="let element">{{ element.solutions }}</td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{ element.solutions || 'NA' }}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="problems">
               <th mat-header-cell *matHeaderCellDef>Problemas</th>
-              <td mat-cell *matCellDef="let element">{{ element.problems }}</td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{ element.problems || 'NA' }}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
@@ -224,7 +262,7 @@
                 <button mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
-                <mat-menu #menu="matMenu">
+                <!-- <mat-menu #menu="matMenu">
                   <button mat-menu-item disabled>
                     <mat-icon>edit</mat-icon>
                     <span>Editar</span>
@@ -237,8 +275,39 @@
                     <mat-icon>visibility</mat-icon>
                     <span>Abrir</span>
                   </button>
+                </mat-menu> -->
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item
+                    (click)="linkMe('/documentos-publicos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
+                    <mat-icon>groups</mat-icon>
+                    <small>Abrir público</small>
+                  </button>
+                  <button mat-menu-item
+                    (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
+                    <mat-icon>lock</mat-icon>
+                    <small>Abrir privado</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>settings</mat-icon>
+                    <small>Editar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>drag_handle</mat-icon>
+                    <small>Duplicar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>file_copy</mat-icon>
+                    <small>Copiar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>exit_to_app</mat-icon>
+                    <small>Mover</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>delete</mat-icon>
+                    <small>Eliminar</small>
+                  </button>
                 </mat-menu>
-
               </td>
             </ng-container>
 
