--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -4,18 +4,16 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
-    <div class="set-6">
-      <breadcrumbs-component>
-        <li>Documentos</li>
-        <li>{{document.title}}</li>
-      </breadcrumbs-component>
-    </div>
+    <breadcrumbs-component>
+      <li>Documentos</li>
+      <li>{{document.title}}</li>
+    </breadcrumbs-component>
+  </div>
 
-    <div class="set-6 txt-right">
-      <span class="created-by">
-        Autor: <span class="author">{{document.createdBy.firstname}} {{document.createdBy.lastname}}</span>
-      </span>
-    </div>
+  <div class="set-12 author-hldr">
+    <span class="created-by">
+      Autor: <span class="author">{{document.createdBy.firstname}} {{document.createdBy.lastname}}</span>
+    </span>
   </div>
 
   <div class="set-12">
@@ -72,6 +70,32 @@
           <avatars-row [users]="collaborators"></avatars-row>
         </div>
       </mat-card>
+
+      <mat-card class="set-12">
+        <div class="inner-card">
+          <div class="set-4">
+            <span class="roundico-green">
+              <mat-icon>groups</mat-icon>
+            </span>
+          </div>
+          <div class="set-8">
+            <p><small>Usuarios</small></p>
+            <strong>{{collaborators.length}}</strong>
+          </div>
+        </div>
+
+        <div class="inner-card">
+          <div class="set-4">
+            <span class="roundico-orange">
+              <mat-icon>front_hand</mat-icon>
+            </span>
+          </div>
+          <div class="set-8">
+            <p><small>Interacciones</small></p>
+            <strong>0</strong>
+          </div>
+        </div>
+      </mat-card>
     </div>
 
     <div class="set-9 col-rgt">
@@ -103,7 +127,39 @@
         </div>
       </div>
 
-      <div class="set-12">
+      <div class="set-12 list-hldr">
+        <div class="set-6">
+          <mat-card class="set-12 info-lists">
+            <p class="list-title">
+              <small>Soluciones</small>
+              <mat-icon class="icon-insights">insights</mat-icon>
+            </p>
+
+            <!--ol class="top-list">
+              <li class="top-list-item">
+                <span>Inseguridad</span>
+              </li>
+            </ol-->
+          </mat-card>
+        </div>
+
+        <div class="set-6">
+          <mat-card class="set-12 info-lists">
+            <p class="list-title">
+              <small>Problemas</small>
+              <mat-icon class="icon-warnings">warning</mat-icon>
+            </p>
+
+            <!-- <ol class="top-list">
+              <li class="top-list-item">
+                <span>Inseguridad</span>
+              </li>
+            </ol> -->
+          </mat-card>
+        </div>
+      </div>
+
+      <!-- <div class="set-12">
         <mat-card class="set-12 info-lists">
           <div class="set-4">
             <div class="inner-card">
@@ -136,12 +192,6 @@
               <small>Soluciones</small>
               <mat-icon class="icon-insights">insights</mat-icon>
             </p>
-
-            <!--ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol-->
           </div>
 
           <div class="set-4">
@@ -149,21 +199,9 @@
               <small>Problemas</small>
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
-
-            <!-- <ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol> -->
           </div>
         </mat-card>
-      </div>
+      </div> -->
 
       <div class="set-12 category-list">
         <mat-card class="set-12">
@@ -174,42 +212,58 @@
           </div>
 
           <div class="set-12 empty-layouts" *ngIf="layouts.length == 0">
-            <p>Sin categorías disponibles.</p>
+            <p>
+              <small>Sin categorías disponibles.</small>
+            </p>
+            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()">
+              <small>Agregar Categoría</small>
+            </button>
           </div>
 
           <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="layouts.length != 0">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef=" let element">
-                <button type="button" class="catbtn" (click)="linkCategories(element._id)">
-                  {{element.categoryName}}
+                <button type="button" class="catbtn"
+                  (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)">
+                  <small>{{element.categoryName}}</small>
                 </button>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="users">
               <th mat-header-cell *matHeaderCellDef> Usuarios </th>
-              <td mat-cell *matCellDef="let element"> {{element.users || 'NA'}} </td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{element.users || 'NA'}}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="interactions">
               <th mat-header-cell *matHeaderCellDef> Interacciones</th>
-              <td mat-cell *matCellDef="let element"> {{element.interactions || 'NA'}} </td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{element.interactions || 'NA'}}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef> Soluciones</th>
-              <td mat-cell *matCellDef="let element"> {{element.solutions || 'NA'}} </td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{element.solutions || 'NA'}}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="problems">
               <th mat-header-cell *matHeaderCellDef> Problemas</th>
-              <td mat-cell *matCellDef="let element"> {{element.problems || 'NA'}} </td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{element.problems || 'NA'}}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="ranking">
               <th mat-header-cell *matHeaderCellDef> Ranking</th>
-              <td mat-cell *matCellDef="let element"> {{element.ranking || 'NA'}} </td>
+              <td mat-cell *matCellDef="let element">
+                <small>{{element.ranking || 'NA'}}</small>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
@@ -219,17 +273,34 @@
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item disabled>
-                    <mat-icon>edit</mat-icon>
+                  <button mat-menu-item
+                    (click)="LinkMe('/documentos-publicos/' + document._id + '/categoria/' + element._id)">
+                    <mat-icon>groups</mat-icon>
+                    <small>Abrir público</small>
+                  </button>
+                  <button mat-menu-item (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)">
+                    <mat-icon>lock</mat-icon>
+                    <small>Abrir privado</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <!-- <button mat-menu-item (click)="popAddDocumentTheme(element._id)">
-                    <mat-icon>report_problem</mat-icon>
-                    <small>Agregar problemática</small>
-                  </button> -->
-                  <button mat-menu-item (click)="linkCategories(element._id)">
-                    <mat-icon>visibility</mat-icon>
-                    <small>Abrir</small>
+                  <button mat-menu-item>
+                    <mat-icon>drag_handle</mat-icon>
+                    <small>Duplicar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>file_copy</mat-icon>
+                    <small>Copiar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>exit_to_app</mat-icon>
+                    <small>Mover</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>delete</mat-icon>
+                    <small>Eliminar</small>
                   </button>
                 </mat-menu>
               </td>
