--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -4,24 +4,23 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
-    <div class="set-6">
-      <breadcrumbs-component>
-        <li>Documentos</li>
-        <li (click)="utilityService.linkMe('/documentos/' + document._id)">
-          {{ document.title }}
-        </li>
-        <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id)">
-          {{ selectedCategory.category.name }}
-        </li>
-        <li>{{ subcategory.category.name }}</li>
-      </breadcrumbs-component>
-    </div>
-    <div class="set-6 txt-right">
-      <span class="created-by">
-        Autor: <span class="author">{{selectedCategory.createdBy.firstname}}
-          {{subcategory.createdBy.lastname}}</span>
-      </span>
-    </div>
+    <breadcrumbs-component>
+      <li>Documentos</li>
+      <li (click)="utilityService.linkMe('/documentos/' + document._id)">
+        {{ document.title }}
+      </li>
+      <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id)">
+        {{ selectedCategory.category.name }}
+      </li>
+      <li>{{ subcategory.category.name }}</li>
+    </breadcrumbs-component>
+  </div>
+
+  <div class="set-12 author-hldr">
+    <span class="created-by">
+      Autor: <span class="author">{{selectedCategory.createdBy.firstname}}
+        {{subcategory.createdBy.lastname}}</span>
+    </span>
   </div>
 
   <div class="set-12">
@@ -134,8 +133,6 @@
         </div>
       </div>
 
-
-
       <div class="set-12 category-list">
         <mat-card class="set-12">
           <div class="set-12 table-head">
@@ -145,15 +142,20 @@
           </div>
 
           <div class="set-12 empty-layouts" *ngIf="topics.length == 0">
-            <p>Sin temas disponibles.</p>
+            <p>
+              <small>Sin temas disponibles.</small>
+            </p>
+            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentTheme()">
+              <small>Agregar Tema</small>
+            </button>
           </div>
 
           <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="topics.length != 0">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element" (click)="linkTopic(element._id)">
-                <button type="button" class="catbtn">
-                  {{element.title}}
+              <td mat-cell *matCellDef="let element">
+                <button type="button" class="catbtn" (click)="linkTopic(element._id)">
+                  <small>{{element.title}}</small>
                 </button>
               </td>
             </ng-container>
@@ -161,28 +163,28 @@
             <ng-container matColumnDef="users">
               <th mat-header-cell *matHeaderCellDef>Usuarios</th>
               <td mat-cell *matCellDef="let element">
-                {{ 0 }}
+                <small>{{ 0 || 'NA' }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="interactions">
               <th mat-header-cell *matHeaderCellDef>Interacciones</th>
               <td mat-cell *matCellDef="let element">
-                {{ 0 }}
+                <small>{{ 0 || 'NA' }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef>Soluciones</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.solutions.length }}
+                <small>{{ element.solutions.length || 'NA' }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="ranking">
               <th mat-header-cell *matHeaderCellDef>Ranking</th>
               <td mat-cell *matCellDef="let element">
-                {{ 0 }}
+                <small>{{ 0 || 'NA' }}</small>
               </td>
             </ng-container>
 
@@ -192,14 +194,44 @@
                 <button mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
-
                 <mat-menu #menu="matMenu">
+                  <button mat-menu-item
+                    (click)="linkMe('/documentos-publicos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + subcategory._id + '/tema/' + element._id)">
+                    <mat-icon>groups</mat-icon>
+                    <small>Abrir público</small>
+                  </button>
+                  <button mat-menu-item
+                    (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + subcategory._id + '/temas/' + element._id)">
+                    <mat-icon>lock</mat-icon>
+                    <small>Abrir privado</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>settings</mat-icon>
+                    <small>Editar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>drag_handle</mat-icon>
+                    <small>Duplicar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>file_copy</mat-icon>
+                    <small>Copiar</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>exit_to_app</mat-icon>
+                    <small>Mover</small>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>delete</mat-icon>
+                    <small>Eliminar</small>
+                  </button>
+                </mat-menu>
+                <!-- <mat-menu #menu="matMenu">
                   <button mat-menu-item>
                     <mat-icon>edit</mat-icon>
                     <span>Editar tema</span>
                   </button>
-                </mat-menu>
-
+                </mat-menu> -->
               </td>
             </ng-container>
 
