--- a/src/app/documents/single-subcategory/single-subcategory.component.scss
+++ b/src/app/documents/single-subcategory/single-subcategory.component.scss
@@ -184,6 +184,10 @@
 
     .empty-layouts {
       margin-top: 40px;
+
+      p {
+        margin-bottom: 10px;
+      }
     }
 
     .categories-table {
@@ -235,7 +239,7 @@
     }
 
     input[type="text"]:focus {
-      box-shadow: inset 0 0 0 2px #306EFF;
+      box-shadow: inset 0 0 0 2px #00031d;
     }
 
     input[type="text"]:disabled {
