--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -4,30 +4,28 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
-    <div class="set-6">
-      <breadcrumbs-component>
-        <li>Documentos</li>
-        <li (click)="utilityService.linkMe('/documentos/' + document._id)">
-          {{ document.title }}
-        </li>
-        <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id)">
-          {{ category.category.name }}
-        </li>
-        <li
-          (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id)">
-          {{ subcategory.category.name }}
-        </li>
-        <li>{{ topic.title }}</li>
-      </breadcrumbs-component>
-    </div>
+    <breadcrumbs-component>
+      <li>Documentos</li>
+      <li (click)="utilityService.linkMe('/documentos/' + document._id)">
+        {{ document.title }}
+      </li>
+      <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id)">
+        {{ category.category.name }}
+      </li>
+      <li
+        (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id)">
+        {{ subcategory.category.name }}
+      </li>
+      <li>{{ topic.title }}</li>
+    </breadcrumbs-component>
+  </div>
 
-    <div class="set-6 txt-right">
-      <span class="created-by">
-        Autor:
-        <span class="author">{{ category.createdBy.firstname }}
-          {{ category.createdBy.lastname }}</span>
-      </span>
-    </div>
+  <div class="set-12 author-hldr">
+    <span class="created-by">
+      Autor:
+      <span class="author">{{ category.createdBy.firstname }}
+        {{ category.createdBy.lastname }}</span>
+    </span>
   </div>
 
   <div class="set-12">
@@ -65,13 +63,12 @@
         </div>
       </mat-card>
 
-      <mat-card class="set-12 card-chart donut">
+      <!-- <mat-card class="set-12 card-chart donut">
         <p class="title">Título de la gráfica</p>
         <div class="content">
           <canvas class="donut-chart" baseChart [data]="data" [type]="'doughnut'" [options]="chartOptions"></canvas>
         </div>
-
-      </mat-card>
+      </mat-card> -->
     </div>
 
     <div class="set-9 col-rgt">
@@ -114,7 +111,12 @@
         </div>
 
         <div class="set-12 empty-layouts" *ngIf="solutions.length == 0">
-          <p>Sin soluciones disponibles.</p>
+          <p>
+            <small>Sin soluciones disponibles.</small>
+          </p>
+          <button type="button" mat-raised-button color="primary" (click)="popAddDocumentSolution()">
+            <small>Agregar Solución</small>
+          </button>
         </div>
 
         <table mat-table [dataSource]="dataSource" class="problems-table" *ngIf="solutions.length != 0">
@@ -122,24 +124,30 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
               <button type="button" class="catbtn" (click)="linkSolution(element._id)">
-                {{ element.title }}
+                <small>{{ element.title }}</small>
               </button>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="ranking">
             <th mat-header-cell *matHeaderCellDef>Ranking</th>
-            <td mat-cell *matCellDef="let element">0</td>
+            <td mat-cell *matCellDef="let element">
+              <small>{{ 0 || 'NA' }}</small>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="users">
             <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-            <td mat-cell *matCellDef="let element">0</td>
+            <td mat-cell *matCellDef="let element">
+              <small>{{ 0 || 'NA' }}</small>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
-            <td mat-cell *matCellDef="let element">0</td>
+            <td mat-cell *matCellDef="let element">
+              <small>{{ 0 || 'NA' }}</small>
+            </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
