--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -215,6 +215,10 @@
 
     .empty-layouts {
       margin-top: 40px;
+
+      p {
+        margin-bottom: 10px;
+      }
     }
 
     .problems-table {
@@ -266,7 +270,7 @@
     }
 
     input[type="text"]:focus {
-      box-shadow: inset 0 0 0 2px #306EFF;
+      box-shadow: inset 0 0 0 2px #00031d;
     }
 
     input[type="text"]:disabled {
