--- a/src/app/public-documents/components/solutions-card/solutions-card.component.scss
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.scss
@@ -62,7 +62,7 @@
   }
 
   input[type="text"]:focus {
-    box-shadow: inset 0 0 0 2px #306EFF;
+    box-shadow: inset 0 0 0 2px #00031d;
   }
 
   input[type="text"]:disabled {
